infra/k8s/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-service
  namespace: mcp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: weather-service

  template:
    metadata:
      labels:
        app: weather-service

    spec:
      containers:
        - name: weather-service
          image: weather-service:1.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
