infra/k8s/weather-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: weather-service

spec:
  selector:
    app: weather-service

  ports:
    - port: 8081
      targetPort: 8081

  type: ClusterIP
